Migrate to Cloudflare

--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "morgan": "~1.9.1",
     "pg": "^7.11.0",
     "pug": "2.0.0-beta11"
+  },
+  "devDependencies": {
+    "@cloudflare/workers-types": "^3.18.0"
   }
 }
