--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,13 +1,9 @@
 {
-    "compilerOptions": {
-        "target": "ES2020",
-        "module": "CommonJS",
-        "strict": true,
-        "lib": [
-            "ES2020"
-        ],
-        "types": [
-            "@cloudflare/workers-types"
-        ]
-    }
+	"compilerOptions": {
+		"target": "ES2020",
+		"module": "CommonJS",
+		"strict": true,
+		"lib": ["ES2020"],
+		"types": ["@cloudflare/workers-types"]
+	}
 }
